# zabbix-mcp-server

./: .gitignore
.cursor/agents/: business-analyst.md  python-system-analyst.md  qa-engineer.md  senior-python-developer.md
.cursor/rules/: core-rules.mdc
.cursor/skills/cursor-subagent-creator/: SKILL.md  reference.md
.cursor/skills/git-add-new-file/: SKILL.md
.plans/: business-analysis.md  system-analysis.md  test_cases.md  zabbix_mcp_server_3b78c91c.plan.md
zabbix-mcp-server/: .env.example  .gitignore  README.md  mcp-description.md  pyproject.toml  requirements-dev.txt  requirements.txt
zabbix-mcp-server/docker/: .env.example  docker-compose.yml
zabbix-mcp-server/scripts/: collect_mcp_tool_samples.py
zabbix-mcp-server/src/zabbix_mcp/: __init__.py  config.py  logging_config.py  main.py  server.py
zabbix-mcp-server/src/zabbix_mcp/tools/: __init__.py  _logging.py  hosts.py  items.py  macros.py  maintenance.py  metrics.py  problems.py  reports.py  triggers.py
zabbix-mcp-server/src/zabbix_mcp/zabbix/: __init__.py  client.py  errors.py  models.py
zabbix-mcp-server/tests/: conftest.py  test_client.py  test_config.py  test_tools_hosts.py  test_tools_items.py  test_tools_macros.py  test_tools_maintenance.py  test_tools_metrics.py  test_tools_problems.py  test_tools_reports.py  test_tools_triggers.py
